--- a/README.org
+++ b/README.org
@@ -1,17 +1,15 @@
-Computer Science 499/599 at Northern Arizona University, Fall 2021
+Computer Science 599 at Northern Arizona University, Fall 2023
 
 Topic: Unsupervised Learning
 
-Dates: Aug 23 - Dec 10.
+Dates: Aug 26 - Dec TODO.
 
-Meeting time/place: 
-- CS499, MWF 8-8:50AM, Engineering building, room 314.
-- CS599, TuTh 8-9:15AM, Health Professions building, room 229.
+Meeting time/place: MWF 11:30-12:20, SBS Castro 304.
 
-Syllabus: [[https://docs.google.com/document/d/1yhLOga-9vuuNin_LK3z7TO3h-i5QxFoWqYte5A9KyZI/edit?usp=sharing][Google Doc]].
+Course materials adapted from [[https://github.com/tdhock/cs499-599-fall-2021][my previous offering]].
 
-Class Discord Link (will expire on 10/4/2021): https://discord.gg/WrM7QAxv 
- 
+Syllabus: [[https://docs.google.com/document/d/1eYYaQcrOFZje9nIlOnpZW0Y3T8cC4v-1Uoxlyshiil0/edit?usp=sharing][Google Doc]].
+
 ** Reading links
 
 *** For quizzes 
@@ -82,16 +80,18 @@ code.
 ** Weekly schedule of Homeworks and reading
 
 To do the homeworks you need to install [[https://cloud.r-project.org/][the most recent version of R]]
-(4.1.1) with either the [[https://rstudio.com/products/rstudio/download/][RStudio]] IDE (for beginners) or the [[http://ess.r-project.org/][ESS]] IDE
-(for students who already know/use emacs, or who want to learn, [[https://www.youtube.com/playlist?list=PLwc48KSH3D1Onsed66FPLywMSIQmAhUYJ][my
-emacs tutorials]]).
+(4.3.1) with emacs and the [[http://ess.r-project.org/][ESS]] IDE, which I will teach how to use in
+class.  ([[https://www.youtube.com/playlist?list=PLwc48KSH3D1Onsed66FPLywMSIQmAhUYJ][my emacs video tutorials]]). If you want to use another editor,
+you must come to office hours and show me that you can use interactive
+code execution.
 
-[[https://drive.google.com/drive/folders/1PeTZJ29HRTM6BrsHTSHAdDfwZit8yA-P?usp=sharing][Folder of all class recordings and code demos from last year]]. [[file:demos/][Folder
-with all code demos from this year]]. Yes you can copy and modify these
-code demos for your homework, since they are a part of the class
-material. But in general, copying code for your homework, from
-classmates or internet sources, is strictly forbidden and will be
-pursued as an academic integrity violation.
+- [[https://drive.google.com/drive/folders/1PeTZJ29HRTM6BrsHTSHAdDfwZit8yA-P?usp=sharing][Folder of all class recordings and code demos from 2020]].
+- [[file:demos/][Folder with all code demos from 2021]].
+
+Yes you can copy and modify these code demos for your homework, since
+they are a part of the class material. But in general, copying code
+for your homework, from classmates or internet sources, is strictly
+forbidden and will be pursued as an academic integrity violation.
 
 Your content and responses to each homework question will be graded as
 follows
@@ -108,64 +108,65 @@ Homework topics and readings for each week are listed below. The date
 of the Monday of each week is written. Each homework is due Friday of
 that week, 11:59PM.
 
-- Aug 23, [[file:homeworks/1.org][Homework 1]]: installing R, reading CSV, data visualization using ggplot2.
+- Aug 28, [[file:homeworks/1.org][Homework week 1]]: installing R/emacs, reading CSV, data
+  visualization using ggplot2.
   - [[file:2021-08-23-applications/slides.pdf][My slides on applications of ML]], [[https://www.youtube.com/watch?v=SRdzg-gzKXs&list=PLwc48KSH3D1M78ilQi35KPe2GHa7B_Rme&index=2&t=0s][My 20 minute intro to R video]],
     for more introductions to R and data visualization, see links
     under "For homeworks" above.
   - Quizzes Due Tues Aug 24: R Basics 1, R ggplot 1. Due Thurs Aug 26:
     R ggplot 2, R ggplot 3.
-- Aug 30, [[file:homeworks/2-kmeans.org][Homework 2]]: K-means.
+- Sep 4, Labor day holiday. [[file:homeworks/2-kmeans.org][Homework week 2]]: K-means.
   - [[file:slides/02-clustering.pdf][Slides]], Introduction to clustering, MLAPP 25.1. Clustering evaluation,
     MLAPP-25.1.2. K-means is discussed in ESL-14.3.6, MLAPP-11.4.2.5.
-  - Quiz due Sun Aug 29: Clustering 1. due Tues Aug 31: Kmeans 1.
-- Sept 6, Labor day 9/6. [[file:homeworks/03-gaussian-mixture-models.org][Homework 3]]. Gaussian mixture models
+  - Quizzes: Clustering 1, Kmeans 1.
+- Sep 11. [[file:homeworks/03-gaussian-mixture-models.org][Homework week 3]]. Gaussian mixture models
   - [[file:slides/03-gaussian-mixtures.pdf][Slides]], ESL-14.3.7, MLAPP-11.4.2. [[file:mclust-models.jpg][mclust model names figure]].
-  - Quiz due Tues Sept 7: mixture 1.
-- Sept 13, [[file:homeworks/04-hierarchical-clustering.org][Homework 4]]: Hierarchical Clustering
+  - Quiz: mixture 1.
+- Sep 18, [[file:homeworks/04-hierarchical-clustering.org][Homework week 4]]: Hierarchical Clustering
   - [[file:slides/04-hierarhical-clustering.pdf][Slides]], ESL-14.3.12, MLAPP-25.5.1.
   - Quizzes Hierarhical 1-3.
-- Sept 20, [[file:homeworks/05-clustering-model-selection.org][Homework 5]]: Clustering model selection
-  - [[file:slides/05-clustering-model-selection.pdf][Slides]], Estimating the number of clusters, ESL-14.3.11. Model
-    selection for latent variable models, MLAPP-11.5.
-  - Quizzes model selection 1-3.
-- Sept 27, [[file:exams/01-practice.org][Review]] and exam, [[file:homeworks/Rpkg.org][CS599 grad student R package coding
-  project 1 due]], CS499 no week 6 homework.
-- Oct 4, [[file:homeworks/07-binary-segmentation.org][Homework week 7]]: Binary segmentation
+- Sep 25, [[file:homeworks/07-binary-segmentation.org][Homework week 5]]: Binary segmentation
   - [[file:slides/07-binary-segmentation.pdf][Slides]], Intro to changepoint detection [[https://arxiv.org/pdf/1801.00718.pdf][Truong et al]]. sections
     1-2. Binary segmentation. Section 5.2.2. Estimating the number of
     changes. section 6.
-  - Quizzes changepoint 1, binary segmentation 1.
-- Oct 11, [[file:homeworks/08-dynamic-programming.org][Homework week 8]]: Optimal segmentation via dynamic programming.
+  - Quizzes changepoint 1, binary segmentation 1. 
+- Oct 2, [[file:homeworks/08-dynamic-programming.org][Homework week 6]]: Optimal segmentation via dynamic programming.
   - [[file:slides/08-optimal-segmentation.pdf][Slides]], [[https://arxiv.org/pdf/1801.00718.pdf][Truong et al]] sections 4.1.1 (Models and Cost functions,
     Parametric Models, Maximum likelihood estimation), 5.1. (Optimal
     detection).
   - Quizzes changepoint 2, optimal segmentation 1-2.
-- Oct 18, [[file:homeworks/09-hidden-markov-models.org][Homework week 9]]: Hidden Markov Models
+- Oct 9, [[file:homeworks/09-hidden-markov-models.org][Homework week 7]]: Hidden Markov Models
   - [[file:slides/09-hidden-markov-models.pdf][Slides]], [[https://cloud.r-project.org/web/packages/depmixS4/vignettes/depmixS4.pdf][depmixS4 vignette]] section 2. Markov Models, MLAPP-17.2. Hidden
     Markov Models, MLAPP-17.3-5. Learning for HMMs, MLAPP-17.5.
   - Quizzes HMM 1-3.
-- Oct 25, [[file:homeworks/10-segmentation-model-selection.org][Homework week 10]]: Segmentation model selection
+- Oct 16, week 8: review and exam.
+  - [[file:exams/01-practice.org][Review]] and exam, [[file:homeworks/Rpkg.org][CS599 grad student R package coding project 1 due]].
+  - [[file:exams/02-practice.org][Review DATE TODO and exam DATE TODO]]. [[file:homeworks/Rpkg.org][CS599 grad student R
+  package coding project 2 due]].
+- Oct 23, [[file:homeworks/05-clustering-model-selection.org][Homework week 9]]: Clustering model selection
+  - [[file:slides/05-clustering-model-selection.pdf][Slides]], Estimating the number of clusters, ESL-14.3.11. Model
+    selection for latent variable models, MLAPP-11.5.
+  - Quizzes model selection 1-3.
+- Oct 30, [[file:homeworks/10-segmentation-model-selection.org][Homework week 10]]: Segmentation model selection
   - [[file:slides/10-segmentation-model-selection.pdf][Slides]], for AIC/BIC read MLAPP-5.3.2.4 (BIC approximation to log
     marginal likelihood) and ESL-7.5 (Estimates of
     In-Sample Prediction Error) and ESL-7.7 (The Bayesian Approach and
     BIC). [[http://ml.nau.edu/viz/2021-10-21-curveAlignment/][Changepoint ROC curve interactive data viz 1]], [[http://ml.nau.edu/viz/2021-10-21-neuroblastomaProcessed-complex/][data viz 2]]
   - Quizzes HMM 4-5, model selection 4.
-- Nov 1, [[file:exams/02-practice.org][Review and exam]]. [[file:homeworks/Rpkg.org][CS599 grad student R
-  package coding project 2 due]], CS499 no homework week 11.
-- Nov 8, Veterans day 11/11. [[file:homeworks/12-principal-components.org][Homework week 12]]: Principal Components Analysis
+- Nov 6, week 11, Veterans day holiday Nov 10.  [[file:homeworks/12-principal-components.org][Homework week 12]]: Principal Components Analysis
   - [[file:slides/12-principal-components.Rmd][Slides]], Principal Components Analysis, ESL-14.5. MLAPP-12.2.
   - Quizzes PCA 1-3.
-- Nov 15, [[file:homeworks/13-auto-encoders.org][Homework week 13]]: Auto-encoders
+- Nov 13.  [[file:homeworks/13-auto-encoders.org][Homework week 12]]: Auto-encoders
   - [[file:slides/13-auto-encoders.pdf][Slides]], [[file:homeworks/13-auto-encoders-torch.R][torch+luz coding demo]], Deep generative models, MLAPP-28.2
     to 28.3. Deep auto-encoders, MLAPP-28.3.2. MLAPP-28.4.2 to 28.4.3.
   - Quizzes Autoencoders 1-3.
-- Nov 22, Thanksgiving 11/25-26. [[file:homeworks/14-other-dimensionality-reduction.org][Homework week 14]]. 
+- Nov 20, week 13, no homework but please start working on your R
+  package coding project. Thanksgiving holiday Nov 23-24.
+- Nov 27, [[file:homeworks/14-other-dimensionality-reduction.org][Homework week 14]]. 
   - [[file:slides/14-other-dimensionality-reduction.pdf][Slides]], Reading: [[https://cloud.r-project.org/web/packages/dimRed/vignettes/dimensionality-reduction.pdf][dimRed vignette]], no quiz.
-- Nov 29, Reading week, [[file:exams/03-practice.org][final exam review questions]],
-  [[file:homeworks/Rpkg.org][CS599 grad student extra credit R package
-  coding project 3 due (this project is not required; you only have to
-  do this if you want extra credit points)]].
-- Final exams. CS499 Mon Dec 6, 7:30-9:30. CS599 Thurs Dec 9, 7:30-9:30.
+- Dec 4, Reading week, [[file:exams/03-practice.org][final exam review questions]],
+  [[file:homeworks/Rpkg.org][CS599 grad student R package coding project 2 due]].
+- Dec 11, Final exam, TODO DATE.
 
 ** General Questions and Answers (FAQ)
 
