--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@ Computer Science 599 at Northern Arizona University, Fall 2023
 
 Topic: Unsupervised Learning
 
-Dates: Aug 26 - Dec TODO.
+Dates: Aug 28 - Dec 15.
 
 Meeting time/place: MWF 11:30-12:20, SBS Castro 304.
 
