--- a/README.org
+++ b/README.org
@@ -160,7 +160,8 @@ that week, 11:59PM.
     to 28.3. Deep auto-encoders, MLAPP-28.3.2. MLAPP-28.4.2 to 28.4.3.
   - Quizzes Autoencoders 1-3.
 - Nov 20, week 13, no homework but please start working on your R
-  package coding project. Thanksgiving holiday Nov 23-24.
+  package coding project. 
+  - class cancelled on Monday and Friday, Thanksgiving holiday Nov 23-24.
 - Nov 27, [[file:homeworks/14-other-dimensionality-reduction.org][Homework week 14]]. 
   - [[file:slides/14-other-dimensionality-reduction.pdf][Slides]], Reading: [[https://cloud.r-project.org/web/packages/dimRed/vignettes/dimensionality-reduction.pdf][dimRed vignette]], no quiz.
 - Dec 4, Reading week, [[file:exams/03-practice.org][final exam review questions]],
