--- a/homeworks/01-emacs-R-viz.org
+++ b/homeworks/01-emacs-R-viz.org
@@ -56,7 +56,7 @@ Your goal is to write an R script that performs the following steps:
    observation (with values corresponding to the row number in the
    original CSV file).
 
-For your homework please upload in bblearn a text file with your code,
+For your homework please upload in canvas a PDF file with your code,
 the corresponding results/output/screenshot (after running your R
 code), and your commentary/interpretation/answers to questions.
 
