--- a/homeworks/03-gaussian-mixture-models.org
+++ b/homeworks/03-gaussian-mixture-models.org
@@ -21,8 +21,11 @@ Gaussian mixture models
   #+END_SRC
    - You can also try using a subset of rows (maybe only 500?) --
      results for some data are better than no result for full data!
-   - You can also use if(!is.null(result)) to only store the result from Mclust if it is non-null (and ignore the result otherwise).
-   - You may use set.seed(123456) or some other number, which may affect the random initialization, and whether or not the function returns a valid model.
+   - You can also use if(!is.null(result)) to only store the result
+     from Mclust if it is non-null (and ignore the result otherwise).
+   - You may use set.seed(123456) or some other number, which may
+     affect the random initialization, and whether or not the function
+     returns a valid model.
    - You can also try using another package that implements Gaussian
      mixture models, e.g. Rmixmod, mixture::gpcm,
      EMCluster::emcluster, mixtools, bgmm, flexmix.
@@ -45,7 +48,7 @@ single PDF.
 ** For CS599 graduate students only:
 
 Code the EM algorithm from scratch based on the pseudo-code in the
-textbooks. 
+textbook/slides. 
 - Write a function GMM(data.matrix, K) which returns a list similar to
   the result of the mclust::Mclust function (with at least elements
   loglik and classification).
