--- a/homeworks/06-dynamic-programming.org
+++ b/homeworks/06-dynamic-programming.org
@@ -39,7 +39,7 @@ size N, with different algorithms in different colors (e.g.,
 Fpsn=black, SegNeigh=green), and with log-log axes/scales. Does the
 quadratic algorithm have a larger slope as expected?
 
-** CS599 Graduate students only
+** Coding dynamic programming from scratch
 
 The goal is to code the dynamic programming algorithm from scratch in
 an R function DYNPROG, using the pseudo-code in the article as
