--- a/homeworks/07-hidden-markov-models.org
+++ b/homeworks/07-hidden-markov-models.org
@@ -24,17 +24,7 @@ data set and compare them to optimal changepoint models.
    of the data (same as in problem 3). Which model seems to be a
    better fit, or are they about the same? 
 
-*** FAQ
-
-Why do I get "NA/NaN/Inf in foreign function call" error? This may
-happen with certain initializations, when there are too many
-states. The error message should say something like "optimization not
-converging, which suggests that the model is not identifiable, try a
-smaller value for nstates, or try another random seed."
-
-*** Comparing log likelihood of two models
-
-The goal is to systematically compare the negative log likelihood of
+5. The goal is to systematically compare the negative log likelihood of
 the two packages (changepoint and depmixS4).
 - changepoint::cpt.meanvar with Q segments should always compute the
   optimal sequence of Q segment mean/variance parameters (Q-1
@@ -72,3 +62,13 @@ the two packages (changepoint and depmixS4).
 - Plot the negative log likelihood as a function of the number of
   segments, different algorithms in different colors (e.g., red=HMM,
   black=DP). Is the curve lower for DP as expected?
+
+
+*** FAQ
+
+Why do I get "NA/NaN/Inf in foreign function call" error? This may
+happen with certain initializations, when there are too many
+states. The error message should say something like "optimization not
+converging, which suggests that the model is not identifiable, try a
+smaller value for nstates, or try another random seed."
+
