--- a/homeworks/07-hidden-markov-models.org
+++ b/homeworks/07-hidden-markov-models.org
@@ -24,8 +24,7 @@ data set and compare them to optimal changepoint models.
    of the data (same as in problem 3). Which model seems to be a
    better fit, or are they about the same? 
 
-5. The goal is to systematically compare the negative log likelihood of
-the two packages (changepoint and depmixS4).
+5. The goal is to systematically compare the negative log likelihood of the two packages (changepoint and depmixS4).
 - changepoint::cpt.meanvar with Q segments should always compute the
   optimal sequence of Q segment mean/variance parameters (Q-1
   changepoints), using dynamic programming.
