--- a/homeworks/06-dynamic-programming.org
+++ b/homeworks/06-dynamic-programming.org
@@ -29,21 +29,7 @@ segmentation algorithm.
    changepoints) Hint: you may need to zoom in to show details around
    the changepoints using xlim(start.pos, end.pos)
 
-EXTRA CREDIT 20 points. changepoint::cpt.mean(data_vector,
-method="SegNeigh", penalty="Manual", Q=max.segs) is an implementation
-of the slow quadratic time dynamic programming algorithm. Show that it
-is empirically slower than jointseg::Fpsn, by doing microbenchmark
-timings on data sets of different sizes N (for a fixed max number of
-segments, say 20). Plot y=computation time in seconds versus x=data
-size N, with different algorithms in different colors (e.g.,
-Fpsn=black, SegNeigh=green), and with log-log axes/scales. Does the
-quadratic algorithm have a larger slope as expected?
-
-** Coding dynamic programming from scratch
-
-The goal is to code the dynamic programming algorithm from scratch in
-an R function DYNPROG, using the pseudo-code in the article as
-reference. 
+4. code the dynamic programming algorithm from scratch in an R function DYNPROG, using the pseudo-code in the article as reference. 
 
 - Your function should input a vector of numeric data, and a maximum
   number of segments parameter (positive integer). It should begin by
@@ -66,6 +52,18 @@ reference.
   compare the last column of the cost matrices, which is the optimal
   cost up to N data points for each model size. Are the values equal
   as expected?
+
+
+EXTRA CREDIT 20 points. changepoint::cpt.mean(data_vector,
+method="SegNeigh", penalty="Manual", Q=max.segs) is an implementation
+of the slow quadratic time dynamic programming algorithm. Show that it
+is empirically slower than jointseg::Fpsn, by doing microbenchmark
+timings on data sets of different sizes N (for a fixed max number of
+segments, say 20). Plot y=computation time in seconds versus x=data
+size N, with different algorithms in different colors (e.g.,
+Fpsn=black, SegNeigh=green), and with log-log axes/scales. Does the
+quadratic algorithm have a larger slope as expected?
+
 
 EXTRA CREDIT 20 points. Compute and return optimal changepoints in
 addition to optimal cost values. Initialize change_mat (a matrix of
