--- a/slides/05-binary-segmentation.Rmd
+++ b/slides/05-binary-segmentation.Rmd
@@ -1,7 +1,10 @@
 ---
 title: "Binary segmentation"
 author: "Toby Dylan Hocking"
-output: beamer_presentation
+output:
+  beamer_presentation:
+    includes:
+      in_header: 05-preamble.tex    
 ---
 
 ```{r opts, echo=FALSE}
@@ -513,13 +516,43 @@ $e$ (both in $1,\dots,n$).
 Then the next segment to split $(j,e)$, and best split point $t$, are defined by
 the best loss decrease,
 
-$$ \min_{(j,e)\in\mathcal S} \min_{t\in\{j,\dots,e\}} 
-\underbrace{L_{j,t} + L_{t+1,e}}_{\text{loss after split}} - 
-\underbrace{L_{j,e}}_{\text{loss before split}}. $$
+$$
+\max_{(j,e)\in\mathcal S}
+\underbrace{L_{j,e}}_{\text{loss before split}}-
+\min_{t\in\{j,\dots,e-1\}} 
+\underbrace{L_{j,t} + L_{t+1,e}}_{\text{loss after split}} 
+$$
 
 Use the cumsum trick to compute loss in constant time,
 $$\sum_{i=j}^t x_i = \sum_{i=1}^t x_i - \sum_{i=1}^{j-1} x_i = y_{t+1} - y_j.$$
-$$L_{j,t} = z_{t+1}-z_j - (y_{t+1}-y_j)/(t-j+1).$$
+$$L_{j,t} = z_{t+1}-z_j - (y_{t+1}-y_j)^2/(t-j+1).$$
+
+---
+
+# Learning algorithm, recursion/pseudo-code
+
+Let $D_{j,e}(t)=L_{j,t}+L_{t+1,n}-L_{j,e}$ be the loss difference after splitting segment $(j,e)$ at $t$, and 
+let $f(j,e)=\min_{t\in j,\dots,e\} D_{j,e}(t)$ be the best loss difference/split on segment $(j,e)$.
+
+Initialization. Let $\mathcal L_1=L_{1,n}$ be the loss with one segment, 
+let $d_0,t_0=f(1,n)$ be the first loss difference/split,
+and let $\mathcal S_1=\{(1,n,d_0,t_0)\}$ be the initial segments to split.
+
+Recursion. For all $k\in\{2,\dots,n\}$ the best segment to split is
+$j^*_k, e^*_k, d^*_k, t^*_k = \argmin_{(j,e,d,t)\in\mathcal S_{k-1} d$,
+the loss is $\mathcal L_k=\mathcal L_{k-1} +d^*_k$, 
+new candidates for loss difference/splits are 
+$\underline d_k,\underline t_k=f(j^*_k,t^*_k)$ and 
+$\overline d_k,\overline t_k=f(t^*_k+1,e^*_k)$, 
+and the set of segments to split is 
+$\mathcal S_k=
+[\mathcal S_{k-1}\setminus (j^*_k, e^*_k, d^*_k, t^*_k)]
+\cup\{
+(j^*_k, t^*_k, \underline d_k, \underline t_k),
+(t^*_k+1,e^*_k,\overline d_k,\overline t_k)
+\}$.
+
+
 
 ---
 
