--- a/homeworks/Rpkg.org
+++ b/homeworks/Rpkg.org
@@ -5,19 +5,18 @@ testing/documenting/distributing your code as a free/open-source R
 package, as well as writing efficient C/C++ code.
 
 To figure out how to write an R package, you can read the free
-online book [[https://r-pkgs.org/][R packages]].
+online book [[https://r-pkgs.org/][R packages]], TODO ADD LINK TO VIDEOS.
 
 You need at least two algorithms from previous coding projects to
 include in your R package.
-- First project: choose from KMEANS, GMM, HCLUST.
-- Second project: include BINSEG and DYNPROG.
-- Third project: code PCA in C++ using either RcppEigen or
-  RcppArmadillo.
+- First project (mid-term): choose from KMEANS, GMM, HCLUST.
+- Second project (final): include BINSEG, DYNPROG, or PCA in C++ using
+  either RcppEigen or RcppArmadillo.
 
 For each function you need to
 - provide documentation that includes example code that shows how to
-  use it. You can either [[https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Rd-format][write the Rd files yourself]], or use a
-  documentation generation system like [[https://r-pkgs.org/man.html][roxygen2]]/[[http://inlinedocs.r-forge.r-project.org/][inlinedocs]].
+  use it. You can either [[https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Rd-format][write the Rd files yourself]] (recommended), or
+  use a documentation generation system like [[https://r-pkgs.org/man.html][roxygen2]]/[[http://inlinedocs.r-forge.r-project.org/][inlinedocs]].
 - write at least one [[https://r-pkgs.org/tests.html][test]] to make sure it returns a reasonable result
   (e.g. it returns an integer vector with same length as the number of
   rows of the input, and all values from 1 to the specified number of
